fix minor AutoModules issues